--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>Password Generator</h1>
     </header>
     <form>
-      <!-- Welcome message and user instructios for form -->
+      <!-- Welcome message and user instructions for form -->
       <p>
         Welcome to the Password Generator. For security reasons, passwords must be between 8 - 128 characters and at least one character type must be selected.
       </p>
